# club

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/club/: __init__.py  __main__.py  caveman_compress_llm.py  caveman_compress_mlm.py  caveman_compress_nlp.py  cli.py  club.py  support_enum.py  support_function.py
