[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/club"]

[tool.hatch.metadata]
allow-direct-references = true

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "caveman_club"
version = "0.2.1"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = ""
dependencies = [
	"numpy>=1.24.0",
	"openai>=1.0.0",
	"spacy>=3.0.0",
	"torch>=2.0.0",
	"transformers>=4.30.0",
]
readme = "README.md"

[project.scripts]
club = "club.cli:app"

[project.urls]
Homepage = "https://github.com/jesus-333/club"
Repository = "https://github.com/jesus-333/club"
"Bug Tracker" = "https://github.com/jesus-333/club/issues"
